name:                ansi-wl-pprint
version:             0.6.8.1
cabal-version:       >= 1.6
category:            User Interfaces, Text
synopsis:            The Wadler/Leijen Pretty Printer for colored ANSI terminal output
description:         This is a pretty printing library based on Wadler's paper "A Prettier Printer". It has been enhanced with support for ANSI terminal colored output using the ansi-terminal package.
license:             BSD3
license-file:        LICENSE
extra-source-files:  README.md
author:              Daan Leijen, Max Bolingbroke
maintainer:          Edward Kmett <ekmett@gmail.com>
bug-reports:         http://github.com/ekmett/ansi-wl-pprint/issues
homepage:            http://github.com/ekmett/ansi-wl-pprint
build-type:          Simple
tested-with:         GHC==7.4.2, GHC==7.6.3, GHC==7.8.4, GHC==7.10.2, GHC==8.0.1

source-repository head
  type: git
  location: git://github.com/ekmett/ansi-wl-pprint.git

flag NewBase
  description:    UNUSED! This flag was once there for compatibility reasons.
  default:        True

flag Example
  description:    Build the example application
  default:        False


library
  exposed-modules: Text.PrettyPrint.ANSI.Leijen
                 , Text.PrettyPrint.ANSI.Leijen.Internal
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-matches

  if impl(ghc >= 8.0)
    ghc-options: -Wcompat
  else
    -- see also notes in Text.PrettyPrint.ANSI.Leijen
    build-depends: semigroups >= 0.1 && < 0.19

  build-depends: ansi-terminal >= 0.4.0 && < 0.7
  build-depends:  base >= 4.5 && < 5

executable ansi-wl-pprint-example
  main-is: Text/PrettyPrint/ANSI/Example.hs

  build-depends: ansi-terminal >= 0.4.0 && < 0.7
  build-depends:  base >= 4.5 && < 5

  if !flag(example)
    buildable:      False
